Fixed overflow issue on support page

--- a/assets/styles/documentation/documentation-main-page.less
+++ b/assets/styles/documentation/documentation-main-page.less
@@ -1,10 +1,12 @@
 .documentation-main-page {
 	font-family: @mainFont;
+  overflow-x: hidden;
 	div.page-header {
 		.pageHeader();
     .footerGradient();
 		div.page-header-container {
-			// background: url('/images/img_sailsShadow.png') no-repeat 42% bottom;
+      .borderBox();
+      width: 100%;
 			padding: 95px 0 35px;
       position: relative;
 			h5 {
